[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
minreq = {  version = "2.11.2", features = ["https", "json-using-serde"] }
ratatui = { version = "0.26.3", features = ["all-widgets"] }